--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
         👋 Hi, I'm Nikki.
     </h1>
     <p>
-        I’m a UX/UI Designer with a background in web development who believes <span>GOOD DESIGN</span> matters. I was
-        born &
-        currently resides in Vancouver, Canada.
+        I’m a UX/UI Designer with a background in web development who believes <span>GOOD DESIGN</span> matters. Currently based in Vancouver, Canada.
     </p>
     <div class="about-email">
         <a href="/about.html">ABOUT</a>
