--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Wu Design</title>
     <link rel="icon" href="/Site%20logo.77f80a8c.png">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
 <header>
@@ -15,7 +16,8 @@
         👋 Hi, I'm Nikki.
     </h1>
     <p>
-        I’m a UX/UI Designer with a background in web development who believes <span>GOOD DESIGN</span> matters. Currently based in Vancouver, Canada.
+        I’m a UX/UI Designer with a background in web development who believes <span>GOOD DESIGN</span> matters.
+        Currently based in Vancouver, Canada.
     </p>
     <div class="about-email">
         <a href="/about.html">ABOUT</a>
@@ -26,7 +28,7 @@
         <img src="/arrow.64aad014.svg" alt="arrow">
     </div>
 </div>
-<div class="projects-container" id="projects">
+<div class="projects-container" id="projects" data-aos-easing="ease-in-out" data-aos-duration="1000" data-aos="fade-up">
     <div class="projects">
         <div class="project-title-description-container">
             <h2>Spotify Round up</h2>
@@ -36,7 +38,7 @@
         </div>
     </div>
 </div>
-<div class="projects-container">
+<div class="projects-container" data-aos-easing="ease-in-out" data-aos-duration="1000" data-aos="fade-up">
     <div class="projects">
         <div class="project-title-description-container">
             <h2><a href="/onepc.html">1PC</a></h2>
@@ -46,7 +48,7 @@
         </div>
     </div>
 </div>
-<div class="projects-container">
+<div class="projects-container" data-aos-easing="ease-in-out" data-aos-duration="1000" data-aos="fade-up">
     <div class="projects">
         <div class="project-title-description-container">
             <h2><a href="/nike.html">Nike: Blazer Project</a></h2>
@@ -57,6 +59,9 @@
     </div>
 </div>
 </body>
-<script src="/about.b8fca702.js" defer="">
+<script src="/about.b8fca702.js" defer=""></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>AOS.init();
+
 </script>
 </html>
