--- a/nike.html
+++ b/nike.html
@@ -5,19 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Wu Design</title>
     <link rel="icon" href="/Site%20logo.77f80a8c.png">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body class="body-project">
 <a href="#" id="scroll" style="display: none;"><span></span></a>
 <header>
     <a href="/index.html"><img src="/logo.5b34b4d1.svg" alt="logo"></a>
 </header>
-<div class="project-title">
+<div class="project-title" data-aos-easing="ease-in-out" data-aos-duration="800" data-aos="fade-up">
     <h1>Nike: The Blazer Project</h1>
     <p>Combine the Past and Future.</p>
     <img src="/headerimg.04c73685.png" alt="header photo">
 </div>
 
-<div class="overview-container">
+<div class="overview-container" data-aos-easing="ease-in-out" data-aos-duration="800" data-aos="fade-up">
     <div class="overview">
         <h3>
             Overview
@@ -60,7 +61,7 @@
 </div>
 <hr>
 
-<div class="challenge-solution">
+<div class="challenge-solution" data-aos-easing="ease-in-out" data-aos-duration="800" data-aos="fade-up">
     <div class="challenge">
         <h2>Challenge</h2>
         <p>How might a redesign of the Nike Blazer page engage a new audience and keep the past ones without dismissing
@@ -73,7 +74,7 @@
     </div>
 </div>
 
-<div class="why-container nike-why">
+<div class="why-container nike-why" data-aos-easing="ease-in-out" data-aos-duration="800" data-aos="fade-up">
     <img src="/MacBook%20Pro%20Mockup.ec4be369.png" alt="banner">
     <div class="why-title">
         <h1>1. Discover</h1>
@@ -94,7 +95,7 @@
 
 </div>
 
-<div class="persona-container">
+<div class="persona-container" data-aos-easing="ease-in-out" data-aos-duration="800" data-aos="fade-up">
     <div class="persona-title nike-persona">
         <h1>2. Define</h1>
     </div>
@@ -113,7 +114,7 @@
 
 </div>
 
-<div class="journeymap-container">
+<div class="journeymap-container" data-aos-easing="ease-in-out" data-aos-duration="800" data-aos="fade-up">
     <div class="journeymap-title">
         <h3>Journey Map</h3>
     </div>
@@ -150,7 +151,7 @@
     </div>
 </div>
 
-<div class="fix-this-container">
+<div class="fix-this-container" data-aos-easing="ease-in-out" data-aos-duration="800" data-aos="fade-up">
     <div class="fix-this-title">
         <h1>3. Develop</h1>
     </div>
@@ -171,7 +172,7 @@
     </div>
 </div>
 
-<div class="takeaway-container">
+<div class="takeaway-container" data-aos-easing="ease-in-out" data-aos-duration="800" data-aos="fade-up">
     <h1>3. Deliver</h1>
     <p>With the wireframes done and research on designing the prototype, I created my design. I wanted to involve the
         past and the present with this design; as you can see, the images have a large black border around them and
@@ -186,6 +187,9 @@
         deserve.</p>
 </div>
 </body>
-<script src="/about.b8fca702.js" defer="">
+<script src="/about.b8fca702.js" defer=""></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>AOS.init();
+
 </script>
 </html>
