--- a/onepc.html
+++ b/onepc.html
@@ -5,20 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Wu Design</title>
     <link rel="icon" href="/Site%20logo.77f80a8c.png">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body class="body-project">
 <a href="#" id="scroll" style="display: none;"><span></span></a>
 <header>
     <a href="/index.html"><img src="/logo.5b34b4d1.svg" alt="logo"></a>
 </header>
-<div class="project-title">
+<div class="project-title" data-aos-easing="ease-in-out" data-aos-duration="800" data-aos="fade-up">
     <h1>1PC: Building Starts Here</h1>
     <p>Building a PC doesn’t have to be overwhelming. 1PC is a clear, reliable, one-stop guide for beginners to build
         their optimal gaming system.</p>
     <img src="/1PC%20Header%20Photo.2328eeaa.png" alt="header photo">
 </div>
 
-<div class="overview-container">
+<div class="overview-container" data-aos-easing="ease-in-out" data-aos-duration="1000" data-aos="fade-up">
     <div class="overview">
         <h3>
             Overview
@@ -60,7 +61,7 @@
 </div>
 <hr>
 
-<div class="challenge-solution">
+<div class="challenge-solution" data-aos-easing="ease-in-out" data-aos-duration="1000" data-aos="fade-up">
     <div class="challenge">
         <h2>Challenge</h2>
         <p>Helping people understand, building a PC isn't as hard as it seems, and it's exciting.</p>
@@ -71,7 +72,7 @@
     </div>
 </div>
 
-<div class="why-container">
+<div class="why-container" data-aos-easing="ease-in-out" data-aos-duration="800" data-aos="fade-up">
     <img src="/whybuild-d.95ffe598.png" alt="banner">
     <div class="why-title">
         <h1>“How to build a PC” Google search results SOARED in 2020.</h1>
@@ -86,7 +87,7 @@
         system. Nevertheless, PC building can be a fun and rewarding DIY project.</p>
 </div>
 
-<div class="persona-container">
+<div class="persona-container" data-aos-easing="ease-in-out" data-aos-duration="800" data-aos="fade-up">
     <div class="persona-title">
         <h1>“I’m new...building a PC seems too hard”</h1>
         <h1 class="think-again">THINK AGAIN.</h1>
@@ -107,7 +108,7 @@
         amount of decentralized information.</p>
 </div>
 
-<div class="journeymap-container">
+<div class="journeymap-container" data-aos-easing="ease-in-out" data-aos-duration="800" data-aos="fade-up">
     <div class="journeymap-title">
         <h1>The Traditional Method</h1>
     </div>
@@ -125,7 +126,7 @@
     </div>
 </div>
 
-<div class="fix-this-container">
+<div class="fix-this-container" data-aos-easing="ease-in-out" data-aos-duration="800" data-aos="fade-up">
     <div class="fix-this-title">
         <h1>Let's fix this!</h1>
     </div>
@@ -165,7 +166,7 @@
     </div>
 </div>
 
-<div class="user-testing-container">
+<div class="user-testing-container" data-aos-easing="ease-in-out" data-aos-duration="800" data-aos="fade-up">
     <div class="user-testing-title">
         <h1>Outside Insight: User-Testing</h1>
     </div>
@@ -186,7 +187,7 @@
     </div>
 </div>
 
-<div class="pieces-together-container">
+<div class="pieces-together-container" data-aos-easing="ease-in-out" data-aos-duration="800" data-aos="fade-up">
     <div class="pieces-together-title">
         <h1>Putting the Pieces Together</h1>
     </div>
@@ -247,7 +248,7 @@
     </div>
 </div>
 
-<div class="golden-path-container">
+<div class="golden-path-container" data-aos-easing="ease-in-out" data-aos-duration="800" data-aos="fade-up">
     <h1>Golden Path</h1>
     <div class="goldenpath-gif">
         <a data-fslightbox="" href="/goldenpath1.b26858c1.gif"><img src="/goldenpath1.b26858c1.gif" alt="Golden Path 1"></a>
@@ -256,7 +257,7 @@
 
 </div>
 
-<div class="takeaway-container">
+<div class="takeaway-container" data-aos-easing="ease-in-out" data-aos-duration="800" data-aos="fade-up">
     <h1>Takeaways</h1>
     <ul>
         <li><p><b>Scope - </b>Initially, we wanted the app to appeal to anyone seeking a high-performance PC, but
@@ -278,6 +279,9 @@
     </ul>
 </div>
 </body>
-<script src="/about.b8fca702.js" defer="">
+<script src="/about.b8fca702.js" defer=""></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>AOS.init();
+
 </script>
 </html>
